--- a/.gitlab/ci/test-helm3.gitlab-ci.yml
+++ b/.gitlab/ci/test-helm3.gitlab-ci.yml
@@ -1,4 +1,4 @@
-.test-job-helm3: &test-job-helm3
+.test-job-helm3:
   stage: test
   image: "$BUILD_IMAGE_NAME"
   variables:
@@ -27,7 +27,7 @@
         }
 
 test-dependencies-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
   script:
@@ -35,7 +35,7 @@ test-dependencies-helm3:
     - kubectl version --client
 
 test-kube-domain-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     KUBE_INGRESS_BASE_DOMAIN: example.com
@@ -43,7 +43,7 @@ test-kube-domain-helm3:
     - auto-deploy check_kube_domain
 
 test-kube-domain-legacy-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     AUTO_DEVOPS_DOMAIN: example.com
@@ -51,21 +51,21 @@ test-kube-domain-legacy-helm3:
     - auto-deploy check_kube_domain && expected_error || failed_as_expected
 
 test-kube-domain_error-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
   script:
     - auto-deploy check_kube_domain && expected_error || failed_as_expected
 
 test-download-chart-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
   script:
     - auto-deploy download_chart
 
 test-deploy-name-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     CI_ENVIRONMENT_SLUG: production
@@ -84,7 +84,7 @@ test-deploy-name-helm3:
       fi
 
 test-auto_database_url-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     CI_ENVIRONMENT_SLUG: production
     POSTGRES_USER: user
@@ -123,7 +123,7 @@ test-auto_database_url-helm3:
     - auto-deploy auto_database_url && expected_error || failed_as_expected
 
 test-get-replicas-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     CI_ENVIRONMENT_SLUG: production
@@ -136,7 +136,7 @@ test-get-replicas-helm3:
       fi
 
 test-get-replicas-multiple-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     CI_ENVIRONMENT_SLUG: production
@@ -150,7 +150,7 @@ test-get-replicas-multiple-helm3:
       fi
 
 test-get-replicas-fraction-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     CI_ENVIRONMENT_SLUG: production
@@ -164,7 +164,7 @@ test-get-replicas-fraction-helm3:
       fi
 
 test-get-replicas-zero-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     CI_ENVIRONMENT_SLUG: production
@@ -178,7 +178,7 @@ test-get-replicas-zero-helm3:
       fi
 
 test-ensure-namespace-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     KUBE_NAMESPACE: project-123456
@@ -186,7 +186,7 @@ test-ensure-namespace-helm3:
     - auto-deploy ensure_namespace
 
 test-initialize-tiller-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     KUBE_NAMESPACE: default
@@ -194,7 +194,7 @@ test-initialize-tiller-helm3:
     - auto-deploy initialize_tiller | grep "Helm 3 does not have tiller"
 
 test-create-secret-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     KUBE_NAMESPACE: default
@@ -208,7 +208,7 @@ test-create-secret-helm3:
     - kubectl get secret "gitlab-registry-${CI_PROJECT_PATH_SLUG}" -n $KUBE_NAMESPACE
 
 test-create-secret-public-project-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     CI_PROJECT_VISIBILITY: public
@@ -218,7 +218,7 @@ test-create-secret-public-project-helm3:
     - kubectl get secret "gitlab-registry-${CI_PROJECT_PATH_SLUG}" -n $KUBE_NAMESPACE && expected_error || failed_as_expected
 
 test-persist-environment-url-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     CI_ENVIRONMENT_URL: review-app.example.com
@@ -227,7 +227,7 @@ test-persist-environment-url-helm3:
     - grep review-app.example.com environment_url.txt
 
 test-install-postgres-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables:
     GIT_STRATEGY: none
     CI_ENVIRONMENT_SLUG: production
@@ -243,7 +243,7 @@ test-install-postgres-helm3:
     - kubectl get statefulset production-postgresql -n $KUBE_NAMESPACE
 
 test-deploy-helm3:
-  extends: test-job-helm3
+  extends: .test-job-helm3
   variables: &deploy-variables-helm3
     CI_APPLICATION_REPOSITORY: "registry.gitlab.com/gitlab-org/cluster-integration/auto-deploy-image/auto-build-image-with-psql"
     CI_APPLICATION_TAG: "5d248f6fa69a"
@@ -376,7 +376,7 @@ test-deploy-modsecurity-helm3:
     - $([[ $(kubectl get ingress production-auto-deploy -n $KUBE_NAMESPACE --no-headers=true -o custom-columns=:"metadata.annotations.nginx\.ingress\.kubernetes\.io/modsecurity-snippet") != "<none>" ]])
 
 test-create-application-secret-helm3:
-  <<: *test-job-helm3
+  extends: .test-job-helm3
   variables:
     KUBE_NAMESPACE: default
     CI_ENVIRONMENT_SLUG: production
