Remember to include test file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,4 +17,5 @@ include:
   - local: .gitlab/ci/shellcheck.gitlab-ci.yml
   - local: .gitlab/ci/test.gitlab-ci.yml
   - local: .gitlab/ci/test-helm3.gitlab-ci.yml
+  - local: .gitlab/ci/test-helm-2to3.gitlab-ci.yml
   - local: .gitlab/ci/release.gitlab-ci.yml
