--- a/.gitlab/ci/test-helm-2to3.gitlab-ci.yml
+++ b/.gitlab/ci/test-helm-2to3.gitlab-ci.yml
@@ -48,12 +48,13 @@ test-helm-2to3:
     - helm2 get production
     - helm2 get values production --output json | grep "postgres://user:testing-password@production-postgresql:5432/production"
     - ./test/verify-deployment-database production postgresql
-    - helm3 2to3 convert production
-    - helm3 2to3 convert production-postgresql
+    - helm3 2to3 convert --tiller-out-cluster production
+    - helm3 2to3 convert --tiller-out-cluster production-postgresql
     - helm2 list
     - helm3 list
     - helm 2to3 cleanup
     - helm2 list
     - export AUTO_DEVOPS_HELM_MAJOR_VERSION=3
+    - auto-deploy download_chart
     - auto-deploy deploy
     - helm3 list
