--- a/.gitlab/ci/test-helm-2to3.gitlab-ci.yml
+++ b/.gitlab/ci/test-helm-2to3.gitlab-ci.yml
@@ -48,8 +48,8 @@ test-helm-2to3:
     - helm2 get production
     - helm2 get values production --output json | grep "postgres://user:testing-password@production-postgresql:5432/production"
     - ./test/verify-deployment-database production postgresql
-    - helm3 2to3 convert --release-storage configmaps --tiller-out-cluster --tiller-ns "$KUBE_NAMESPACE" production
-    - helm3 2to3 convert --release-storage configmaps --tiller-out-cluster --tiller-ns "$KUBE_NAMESPACE" production-postgresql
+    - helm3 2to3 convert --release-storage --release-cleanup configmaps --tiller-out-cluster --tiller-ns "$KUBE_NAMESPACE" production
+    - helm3 2to3 convert --release-storage --release-cleanup configmaps --tiller-out-cluster --tiller-ns "$KUBE_NAMESPACE" production-postgresql
     - helm2 list
     - helm3 list
     - helm3 2to3 cleanup --release-storage configmaps --tiller-out-cluster --tiller-ns "$KUBE_NAMESPACE"
