Maybe the helm2 command is failing?

--- a/.gitlab/ci/test-helm-2to3.gitlab-ci.yml
+++ b/.gitlab/ci/test-helm-2to3.gitlab-ci.yml
@@ -53,7 +53,7 @@ test-helm-2to3:
     - helm2 list
     - helm3 list
     - yes | helm3 2to3 cleanup --release-storage configmaps --tiller-out-cluster --tiller-ns "$KUBE_NAMESPACE"
-    - helm2 list
+    - helm2 list || echo 'helm2 failed to run'
     - export AUTO_DEVOPS_HELM_MAJOR_VERSION=3
     - auto-deploy download_chart
     - auto-deploy deploy
