feat: Use bundled chart
BREAKING CHANGE: This is not technically a breaking change as AutoDeploy
pipelines still use the v0 chart, however, we decided to increment a major
version for the safety.

Apply 2 suggestion(s) to 2 file(s)

--- a/.gitlab/ci/shellcheck.gitlab-ci.yml
+++ b/.gitlab/ci/shellcheck.gitlab-ci.yml
@@ -3,7 +3,7 @@ test-shellcheck:
   image: koalaman/shellcheck-alpine:stable
   needs: []
   script:
-    - shellcheck src/bin/auto-deploy test/*
+    - shellcheck src/bin/auto-deploy test/verify-application-secret test/verify-deployment-database
 
 test-shfmt:
   stage: test
@@ -12,4 +12,4 @@ test-shfmt:
     entrypoint: ["/bin/sh", "-c"]
   needs: []
   script:
-    - shfmt -i 2 -ci -l -d src/bin/auto-deploy test/*
+    - shfmt -i 2 -ci -l -d src/bin/auto-deploy test/verify-application-secret test/verify-deployment-database
