--- a/assets/auto-deploy-app/templates/ingress.yaml
+++ b/assets/auto-deploy-app/templates/ingress.yaml
@@ -34,18 +34,18 @@ spec:
   tls:
   - hosts:
 {{- if .Values.service.commonName }}
-    - {{ template "hostname" .Values.service.commonName }}
+    - {{ template "hostname" .Values.service.commonName | quote }}
 {{- end }}
-    - {{ template "hostname" .Values.service.url }}
+    - {{ template "hostname" .Values.service.url | quote }}
 {{- if .Values.service.additionalHosts }}
 {{- range $host := .Values.service.additionalHosts }}
-    - {{ $host }}
+    - {{ $host | quote }}
 {{- end -}}
 {{- end }}
     secretName: {{ .Values.ingress.tls.secretName | default (printf "%s-tls" (include "fullname" .)) }}
 {{- end }}
   rules:
-  - host: {{ template "hostname" .Values.service.url }}
+  - host: {{ template "hostname" .Values.service.url | quote }}
     http:
       &httpRule
       paths:
@@ -54,13 +54,13 @@ spec:
           serviceName: {{ template "fullname" . }}
           servicePort: {{ .Values.service.externalPort }}
 {{- if .Values.service.commonName }}
-  - host: {{ template "hostname" .Values.service.commonName }}
+  - host: {{ template "hostname" .Values.service.commonName | quote }}
     http:
       <<: *httpRule
 {{- end -}}
 {{- if .Values.service.additionalHosts }}
 {{- range $host := .Values.service.additionalHosts }}
-  - host: {{ $host }}
+  - host: {{ $host | quote }}
     http:
       <<: *httpRule
 {{- end -}}
