chore: Produce the latest image for feature branch and major version
This commit extends the docker image to create a floating version
which is useful to easily integrate with CI Template.

--- a/.gitlab/ci/build.gitlab-ci.yml
+++ b/.gitlab/ci/build.gitlab-ci.yml
@@ -13,3 +13,6 @@ build:
        --build-arg "GLIBC_VERSION=$GLIBC_VERSION"
        --tag "$BUILD_IMAGE_NAME" .
     - docker push "$BUILD_IMAGE_NAME"
+    - export latest_tag="${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}:latest"
+    - docker tag "$BUILD_IMAGE_NAME" $latest_tag
+    - docker push $latest_tag
