--- a/.gitlab/ci/release.gitlab-ci.yml
+++ b/.gitlab/ci/release.gitlab-ci.yml
@@ -18,12 +18,15 @@ release-tag:
     - 'echo ${CI_JOB_TOKEN} | docker login --password-stdin -u $CI_REGISTRY_USER $CI_REGISTRY'
     - export ci_image="${CI_REGISTRY_IMAGE}"
     - export ci_image_tag=${CI_COMMIT_TAG:-$CI_COMMIT_SHORT_SHA}
+    - export ci_image_tag_major=$(echo $CI_COMMIT_TAG | sed 's/\(v[0-9]\+\)\.[0-9]\+\.[0-9]\+/\1/')
     - echo "Using tag $ci_image_tag for image"
     - docker pull "$BUILD_IMAGE_NAME"
     - docker tag "$BUILD_IMAGE_NAME" $ci_image:latest
     - docker tag "$BUILD_IMAGE_NAME" $ci_image:$ci_image_tag
+    - docker tag "$BUILD_IMAGE_NAME" $ci_image:$ci_image_tag_major
     - docker push $ci_image:latest
     - docker push $ci_image:$ci_image_tag
+    - docker push $ci_image:$ci_image_tag_major
   rules:
     - if: $CI_COMMIT_TAG
 
